--- a/TamuCareerCloset/app/views/home/index.html.erb
+++ b/TamuCareerCloset/app/views/home/index.html.erb
@@ -13,12 +13,12 @@
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--mobile apps-->
 <!--Custom Theme files -->
-<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
-<link href="css/style.css" type="text/css" rel="stylesheet" media="all">
-<link rel="stylesheet" href="css/prettySticky.css" type="text/css">
+<link href="TamuCareerCloset/app/assets/stylesheets/css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+<link href="TamuCareerCloset/app/assets/stylesheets/css/style.css" type="text/css" rel="stylesheet" media="all">
+<link rel="stylesheet" href="TamuCareerCloset/app/assets/stylesheets/css/prettySticky.css" type="text/css">
 <!-- //Custom Theme files -->
 <!-- js -->
-<script src="js/jquery-1.11.1.min.js"></script> 
+<script src="TamuCareerCloset/app/assets/javascripts/jquery-1.11.1.min.js"></script> 
 <!-- //js -->
 <!-- start-smoth-scrolling-->
 <script type="text/javascript">
@@ -67,7 +67,7 @@
 			<!--//navigation-->
 			<div class="banner-text">
 				<!--banner Slider starts Here-->
-				<script src="js/responsiveslides.min.js"></script>
+				<script src="TamuCareerCloset/app/assets/javascripts/responsiveslides.min.js"></script>
 				<script>
 					// You can also use "$(window).load(function() {"
 					$(function () {
@@ -156,11 +156,11 @@
 	</div>
 	<!--//footer-->
 	<!-- script-for prettySticky -->
-	<script src="js/prettySticky.js"></script>
+	<script src="TamuCareerCloset/app/assets/javascripts/prettySticky.js"></script>
 	<!--//script-for prettySticky -->
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.js"></script>
+    <script src="TamuCareerCloset/app/assets/javascripts/bootstrap.js"></script>
 </body>
 </html>
