--- a/TamuCareerCloset/app/assets/stylesheets/style.css
+++ b/TamuCareerCloset/app/assets/stylesheets/style.css
@@ -38,7 +38,7 @@ body a:hover{
 }
 /*--baner--*/
 .banner {
-   background:url(../images/a.jpg)no-repeat 0px 0px;
+   background:url(TamuCareerCloset/app/assets/images/a.jpg)no-repeat 0px 0px;
    -webkit-background-size:cover;
     background-size:cover;
 	-moz-background-size:cover;
@@ -327,7 +327,7 @@ ul.nav.navbar-right {
     text-decoration: none;
     height: 53px;
     width: 32px;
-    background: url("../images/icons.png") no-repeat 0px 0px;
+    background: url("TamuCareerCloset/app/assets/imagesicons.png") no-repeat 0px 0px;
 }
 .callbacks_nav.next {
     left: auto;
@@ -546,7 +546,7 @@ p {
 /*-- //services --*/
 /*--slid--*/
 .slid {
-  background: url(../images/a.jpg) no-repeat 0px 0px;
+  background: url(TamuCareerCloset/app/assets/imagesa.jpg) no-repeat 0px 0px;
   background-size: cover;
   text-align: center;
 }
@@ -670,7 +670,7 @@ p {
 }
 .footer-bottom a:before {
     content: '';
-    background:url(../images/icons.png)no-repeat 3px 1px;
+    background:url(TamuCareerCloset/app/assets/images/icons.png)no-repeat 3px 1px;
 	width: 20px;
     height: 20px;
     display: block;
@@ -780,7 +780,7 @@ p {
 /*-- testimonials --*/
 .testimonials {
     padding: 6em 0 8em;
-    background: url(../images/slid.jpg) no-repeat 0px 0px fixed;
+    background: url(TamuCareerCloset/app/assets/imagesslid.jpg) no-repeat 0px 0px fixed;
     background-size: cover;
 }
 .flexslider {
@@ -827,17 +827,17 @@ p {
 	border-radius: 60%;
 }
 .ch-img-1 {
-    background: url(../images/t1.jpg) center top;
+    background: url(TamuCareerCloset/app/assets/images/t1.jpg) center top;
 }
 .ch-img-2 { 
-	background:url(../images/t2.jpg) center top;
+	background:url(TamuCareerCloset/app/assets/images/t2.jpg) center top;
 }
 .ch-img-3 { 
-	background:url(../images/t3.jpg) -9px 0px;
+	background:url(TamuCareerCloset/app/assets/images/t3.jpg) -9px 0px;
 	background-size: cover;
 }
 .ch-img-4 { 
-	background:url(../images/t4.jpg) -45px -15px;
+	background:url(TamuCareerCloset/app/assets/images/t4.jpg) -45px -15px;
 }
 .ch-info {
 	position: absolute;
