--- a/TamuCareerCloset/app/views/home/available.html.erb
+++ b/TamuCareerCloset/app/views/home/available.html.erb
@@ -13,13 +13,13 @@
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--mobile apps-->
 <!--Custom Theme files -->
-<link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
-<link href="css/style.css" type="text/css" rel="stylesheet" media="all">
-<link rel="stylesheet" href="css/prettySticky.css" type="text/css">
-<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
+<link href="TamuCareerCloset/app/assets/stylesheets/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+<link href="TamuCareerCloset/app/assets/stylesheets/style.css" type="text/css" rel="stylesheet" media="all">
+<link rel="stylesheet" href="TamuCareerCloset/app/assets/stylesheets/prettySticky.css" type="text/css">
+<link rel="stylesheet" href="TamuCareerCloset/app/assets/stylesheets/flexslider.css" type="text/css" media="screen" />
 <!-- //Custom Theme files -->
 <!-- js -->
-<script src="js/jquery-1.11.1.min.js"></script> 
+<script src="TamuCareerCloset/app/assets/javascripts/jquery-1.11.1.min.js"></script> 
 <!-- //js -->
 <!-- start-smoth-scrolling-->
 <script type="text/javascript">
@@ -103,11 +103,11 @@
 	</div>
 	<!--//footer-->
 	<!-- script-for prettySticky -->
-	<script src="js/prettySticky.js"></script>
+<script src="TamuCareerCloset/app/assets/javascripts/prettySticky.js"></script>
 	<!--//script-for prettySticky -->
 	<!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.js"></script>
+    <script src="TamuCareerCloset/app/assets/javascripts/bootstrap.js"></script>
 </body>
 </html>
