--- a/TamuCareerCloset/app/views/home/index.html.erb
+++ b/TamuCareerCloset/app/views/home/index.html.erb
@@ -13,9 +13,9 @@
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!--mobile apps-->
 <!--Custom Theme files -->
-<link href="TamuCareerCloset/app/assets/stylesheets/css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
-<link href="TamuCareerCloset/app/assets/stylesheets/css/style.css" type="text/css" rel="stylesheet" media="all">
-<link rel="stylesheet" href="TamuCareerCloset/app/assets/stylesheets/css/prettySticky.css" type="text/css">
+<link href="TamuCareerCloset/app/assets/stylesheets/bootstrap.css" type="text/css" rel="stylesheet" media="all">
+<link href="TamuCareerCloset/app/assets/stylesheets/style.css" type="text/css" rel="stylesheet" media="all">
+<link rel="stylesheet" href="TamuCareerCloset/app/assets/stylesheets/prettySticky.css" type="text/css">
 <!-- //Custom Theme files -->
 <!-- js -->
 <script src="TamuCareerCloset/app/assets/javascripts/jquery-1.11.1.min.js"></script> 
@@ -47,17 +47,17 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<h1><a href="index.html"> A&amp;M Career Closet</a></h1>
+							<h1><a href="index.html.erb"> A&amp;M Career Closet</a></h1>
 						</div>
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-right">
 								<li><a href="#home" class="link-kumya active scroll"><span data-letters="Home">Home</span></a></li>
-								<li><a href="available.html" class="link-kumya"><span data-letters="Available">Available</span></a></li>	
-								<li><a href="checkedout.html" class="link-kumya"><span data-letters="Checked Out">Checked Out</span></a></li>
-								<li><a href="late.html" class="link-kumya"><span data-letters="Late">Late</span></a></li>
-								<li><a href="appointments.html" class="link-kumya"><span data-letters="Appointments">Appointments</span></a></li>		
-								<li><a href="signin.html" class="link-kumya"><span data-letters="Sign In">Sign In</span></a></li>
+								<li><a href="available.html.erb" class="link-kumya"><span data-letters="Available">Available</span></a></li>	
+								<li><a href="checkedout.html.erb" class="link-kumya"><span data-letters="Checked Out">Checked Out</span></a></li>
+								<li><a href="late.html.erb" class="link-kumya"><span data-letters="Late">Late</span></a></li>
+								<li><a href="appointments.html.erb" class="link-kumya"><span data-letters="Appointments">Appointments</span></a></li>		
+								<li><a href="signin.html.erb" class="link-kumya"><span data-letters="Sign In">Sign In</span></a></li>
 							</ul>	
 							<div class="clearfix"> </div>
 						</div>
