--- a/TamuCareerCloset/app/assets/stylesheets/style.css
+++ b/TamuCareerCloset/app/assets/stylesheets/style.css
@@ -1033,7 +1033,7 @@ p {
 .blog-img {
   overflow: hidden;
 }
-..blog-img a img {
+.blog-img a img {
   width: 100%;
   -webkit-transform: scaleY(1);
     -moz-transform: scaleY(1);
@@ -1046,7 +1046,7 @@ p {
     -ms-transition: all 0.7s ease-in-out;
     transition: all 0.7s ease-in-out;
 }
-..blog-img a img:hover{
+.blog-img a img:hover{
 	-webkit-transform: scale(1.5);
     -moz-transform: scale(1.5);
     -o-transform: scale(1.5);
