--- a/TamuCareerCloset/app/views/home/appointments.html.erb
+++ b/TamuCareerCloset/app/views/home/appointments.html.erb
@@ -52,11 +52,11 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-right">
-								<li><a href="index.html.erb" class="link-kumya"><span data-letters="Home">Home</span></a></li>
+								<li><a href="/index" class="link-kumya"><span data-letters="Home">Home</span></a></li>
 								<li><a href="available.html.erb" class="link-kumya active"><span data-letters="Available">Available</span></a></li>	
 								<li><a href="checkedout.html.erb" class="link-kumya"><span data-letters="Checked Out">Checked Out</span></a></li>
 								<li><a href="late.html.erb" class="link-kumya"><span data-letters="Late">Late</span></a></li>
-								<li><a href="appointments.html.erb" class="link-kumya"><span data-letters="Appointments">Appointments</span></a></li>		
+								<li><a href="/appointments" class="link-kumya"><span data-letters="Appointments">Appointments</span></a></li>		
 								<li><a href="signin.html.erb" class="link-kumya"><span data-letters="Sign In">Sign In</span></a></li>
 							</ul>	
 							<div class="clearfix"> </div>
