--- a/TamuCareerCloset/app/views/home/index.html.erb
+++ b/TamuCareerCloset/app/views/home/index.html.erb
@@ -53,11 +53,11 @@
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-right">
 								<li><a href="#home" class="link-kumya active scroll"><span data-letters="Home">Home</span></a></li>
-								<li><a href="available.html.erb" class="link-kumya"><span data-letters="Available">Available</span></a></li>	
-								<li><a href="checkedout.html.erb" class="link-kumya"><span data-letters="Checked Out">Checked Out</span></a></li>
-								<li><a href="late.html.erb" class="link-kumya"><span data-letters="Late">Late</span></a></li>
-								<li><a href="appointments.html.erb" class="link-kumya"><span data-letters="Appointments">Appointments</span></a></li>		
-								<li><a href="signin.html.erb" class="link-kumya"><span data-letters="Sign In">Sign In</span></a></li>
+								<li><a href="/available" class="link-kumya"><span data-letters="Available">Available</span></a></li>	
+								<li><a href="/checkedout" class="link-kumya"><span data-letters="Checked Out">Checked Out</span></a></li>
+								<li><a href="/late" class="link-kumya"><span data-letters="Late">Late</span></a></li>
+								<li><a href="/appointments" class="link-kumya"><span data-letters="Appointments">Appointments</span></a></li>		
+								<li><a href="/signin" class="link-kumya"><span data-letters="Sign In">Sign In</span></a></li>
 							</ul>	
 							<div class="clearfix"> </div>
 						</div>
