--- a/TamuCareerCloset/app/views/home/signin.html.erb
+++ b/TamuCareerCloset/app/views/home/signin.html.erb
@@ -55,11 +55,11 @@
 								collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-right">
 								<li><a href="#home" class="link-kumya"><span data-letters="Home">Home</span></a></li>
-								<li><a href="/available" class="link-kumya active"><span data-letters="Available">Available</span></a></li>	
+								<li><a href="/available" class="link-kumya"><span data-letters="Available">Available</span></a></li>	
 								<li><a href="/checkedout" class="link-kumya"><span data-letters="Checked Out">Checked Out</span></a></li>
 								<li><a href="/late" class="link-kumya"><span data-letters="Late">Late</span></a></li>
 								<li><a href="/appointments" class="link-kumya"><span data-letters="Appointments">Appointments</span></a></li>
-								<li><a href="/signin" class="link-kumya"><span data-letters="Sign In">Sign In</span></a></li>
+								<li><a href="/signin" class="link-kumya active"><span data-letters="Sign In">Sign In</span></a></li>
 							</ul>	
 							<div class="clearfix"> </div>
 						</div>
