Fixed Home link on all pages

--- a/TamuCareerCloset/app/views/home/checkedout.html.erb
+++ b/TamuCareerCloset/app/views/home/checkedout.html.erb
@@ -55,7 +55,7 @@
 							<ul class="nav navbar-right">
 								collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-right">
-								<li><a href="#home" class="link-kumya"><span data-letters="Home">Home</span></a></li>
+								<li><a href="/home" class="link-kumya"><span data-letters="Home">Home</span></a></li>
 								<li><a href="/available" class="link-kumya"><span data-letters="Available">Available</span></a></li>	
 								<li><a href="/checkedout" class="link-kumya active"><span data-letters="Checked Out">Checked Out</span></a></li>
 								<li><a href="/late" class="link-kumya"><span data-letters="Late">Late</span></a></li>
