--- a/TamuCareerCloset/app/views/home/index.html.erb
+++ b/TamuCareerCloset/app/views/home/index.html.erb
@@ -52,7 +52,7 @@
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 							<ul class="nav navbar-right">
-								<li><a href="#home" class="link-kumya active scroll"><span data-letters="Home">Home</span></a></li>
+								<li><a href="/home" class="link-kumya active scroll"><span data-letters="Home">Home</span></a></li>
 								<li><a href="/available" class="link-kumya"><span data-letters="Available">Available</span></a></li>	
 								<li><a href="/checkedout" class="link-kumya"><span data-letters="Checked Out">Checked Out</span></a></li>
 								<li><a href="/late" class="link-kumya"><span data-letters="Late">Late</span></a></li>
