--- a/TamuCareerCloset/app/views/home/index.html.erb
+++ b/TamuCareerCloset/app/views/home/index.html.erb
@@ -96,10 +96,10 @@
 								<h2>Make sure they have their student ID</h2>	
 								<h3>Lorem Ipsum was popularised In sit amet sapien eros Integer dolore magna aliqua Temporibus autem quibusdam</h3>	
 								<div class="more">
-									<a href="single.html" class="button-pipaluk button--inverted"> Check Out</a>
+									<a href="/checkout" class="button-pipaluk button--inverted"> Check Out</a>
 								</div>
 								<div class="mores">
-									<a href="single.html" class="button-pipaluk button--inverted"> Check In</a>
+									<a href="/checkin" class="button-pipaluk button--inverted"> Check In</a>
 								</div>		
 							</div>	
 						</li>
@@ -108,10 +108,10 @@
 								<h2>Don't forget to sign out</h2>	
 								<h3>In sit amet sapien eros Integer dolore magna aliqua Temporibus lorem lpsum was popularised autem quibusdam</h3>	
 								<div class="more">
-									<a href="single.html" class="button-pipaluk button--inverted"> Check Out</a>
+									<a href="/checkout" class="button-pipaluk button--inverted"> Check Out</a>
 								</div>
 								<div class="mores">
-									<a href="single.html" class="button-pipaluk button--inverted"> Check In</a>
+									<a href="/checkin" class="button-pipaluk button--inverted"> Check In</a>
 								</div>		
 							</div>	
 						</li>
@@ -120,10 +120,10 @@
 								<h2>Don't forget to check condition of suit</h2>	
 								<h3>Temporibus autem quibusdam Lorem Ipsum was popularised In sit amet sapien eros Integer dolore magna aliqua </h3>	
 								<div class="more">
-									<a href="single.html" class="button-pipaluk button--inverted"> Check Out</a>
+									<a href="/checkout" class="button-pipaluk button--inverted"> Check Out</a>
 								</div>
 								<div class="mores">
-									<a href="single.html" class="button-pipaluk button--inverted"> Check In</a>
+									<a href="/checkin" class="button-pipaluk button--inverted"> Check In</a>
 								</div>		
 							</div>	
 						</li>
