--- a/TamuCareerCloset/app/views/home/available.html.erb
+++ b/TamuCareerCloset/app/views/home/available.html.erb
@@ -86,7 +86,37 @@
 	<!--//about-->
 	<!-- testimonials -->
 	<div class="testimonials">
-		
+		<div class="container">
+			<table>
+			  <thead>
+			    <tr>
+			      <th>Apparel id</th>
+			      <th>Sex</th>
+			      <th>Article</th>
+			      <th>Size</th>
+			      <th colspan="3"></th>
+			    </tr>
+			  </thead>
+
+			  <tbody>
+			    <% @apparels.each do |apparel| %>
+			      <tr>
+			        <td><%= apparel.Apparel_ID %></td>
+			        <td><%= apparel.Sex %></td>
+			        <td><%= apparel.Article %></td>
+			        <td><%= apparel.Size %></td>
+			        <td><%= link_to 'Show', apparel %></td>
+			        <td><%= link_to 'Edit', edit_apparel_path(apparel) %></td>
+			        <td><%= link_to 'Destroy', apparel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+			      </tr>
+			    <% end %>
+			  </tbody>
+			</table>
+
+			<br>
+
+			<%= link_to 'New Apparel', new_apparel_path %>
+		</div>
 	</div>
 	<!-- //testimonials -->
 	<!--team-->
