--- a/TamuCareerCloset/app/views/apparels/index.html.erb
+++ b/TamuCareerCloset/app/views/apparels/index.html.erb
@@ -48,7 +48,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <h1><a href="index.html">A&amp;M Career Closet</a></h1>
+              <h1><a href="/home">A&amp;M Career Closet</a></h1>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -94,7 +94,7 @@
             <th>Sex</th>
             <th>Article</th>
             <th>Size</th>
-            <th colspan="3"></th>
+            <th colspan="10"></th>
           </tr>
         </thead>
 
