--- a/TamuCareerCloset/app/views/home/index.html.erb
+++ b/TamuCareerCloset/app/views/home/index.html.erb
@@ -47,7 +47,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<h1><a href="index.html.erb"> A&amp;M Career Closet</a></h1>
+							<h1><a href="/home"> A&amp;M Career Closet</a></h1>
 						</div>
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -94,7 +94,7 @@
 						<li>
 							<div class="banner-text-info">
 								<h2>Make sure they have their student ID</h2>	
-								<h3>Lorem Ipsum was popularised In sit amet sapien eros Integer dolore magna aliqua Temporibus autem quibusdam</h3>	
+								<h3>Thank you for using TAMU Career Closet!</h3>	
 								<div class="more">
 									<a href="/checkout" class="button-pipaluk button--inverted"> Check Out</a>
 								</div>
@@ -106,7 +106,7 @@
 						<li>
 							<div class="banner-text-info">
 								<h2>Don't forget to sign out</h2>	
-								<h3>In sit amet sapien eros Integer dolore magna aliqua Temporibus lorem lpsum was popularised autem quibusdam</h3>	
+								<h3>Thank you for using TAMU Career Closet!</h3>	
 								<div class="more">
 									<a href="/checkout" class="button-pipaluk button--inverted"> Check Out</a>
 								</div>
@@ -118,7 +118,7 @@
 						<li>
 							<div class="banner-text-info">
 								<h2>Don't forget to check condition of suit</h2>	
-								<h3>Temporibus autem quibusdam Lorem Ipsum was popularised In sit amet sapien eros Integer dolore magna aliqua </h3>	
+								<h3>Thank you for using TAMU Career Closet!</h3>	
 								<div class="more">
 									<a href="/checkout" class="button-pipaluk button--inverted"> Check Out</a>
 								</div>
@@ -141,7 +141,7 @@
 		<div class="container">
 			<div class="col-md-4 footer-grids">
 				<h3>Review</h3>
-				<p>The Website was built with the teamwork of CSCE 432 and Texas A&amp;M Career Closet in order to streamline the process of checking in and checking out customers.</p>
+				<p>The Website was built with the teamwork of CSCE 431 and Texas A&amp;M Career Closet in order to streamline the process of checking in and checking out customers.</p>
 			</div>
 			<div class="col-md-3 footer-grids">
 				<h3>Contact CSCE 431</h3>
