--- a/TamuCareerCloset/app/views/home/signin.html.erb
+++ b/TamuCareerCloset/app/views/home/signin.html.erb
@@ -47,7 +47,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<h1><a href="index.html">A&amp;M Career Closet</a></h1>
+							<h1><a href="/home">A&amp;M Career Closet</a></h1>
 						</div>
 						<!-- Collect the nav links, forms, and other content for toggling -->
 						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
