Rspec Testing Added

--- a/TamuCareerCloset/app/views/apparels/_form.html.erb
+++ b/TamuCareerCloset/app/views/apparels/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :Size %><br>
     <%= f.text_field :Size %>
   </div>
+  <div class="field">
+    <%= f.label :Status %><br>
+    <%= f.text_field :Status %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
