--- a/TamuCareerCloset/app/views/apparels/show.html.erb
+++ b/TamuCareerCloset/app/views/apparels/show.html.erb
@@ -20,5 +20,10 @@
   <%= @apparel.Size %>
 </p>
 
+<p>
+  <strong>Status:</strong>
+  <%= @apparel.Status %>
+</p>
+
 <%= link_to 'Edit', edit_apparel_path(@apparel) %> |
 <%= link_to 'Back', apparels_path %>
