--- a/TamuCareerCloset/app/views/home/available.html.erb
+++ b/TamuCareerCloset/app/views/home/available.html.erb
@@ -90,7 +90,7 @@
 			<table>
 			  <thead>
 			    <tr>
-			      <th>Apparel id</th>
+			      <th>Apparel</th>
 			      <th>Sex</th>
 			      <th>Article</th>
 			      <th>Size</th>
