--- a/TamuCareerCloset/app/views/home/checkedout.html.erb
+++ b/TamuCareerCloset/app/views/home/checkedout.html.erb
@@ -73,6 +73,14 @@
 			</div>	
 		</div>
 	</div>
+	
+	<div class="about">
+    <div class="container">
+      <h3 class="title">Our Checked Out Suits</h3>
+      <div class="about-info">
+      </div>
+    </div>
+  </div>
 	<!--//banner-->
 		<!--gallery-->
 	<div class="gallery">		
