--- a/TamuCareerCloset/app/views/home/available.html.erb
+++ b/TamuCareerCloset/app/views/home/available.html.erb
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Rental a Real Estates and Builders Category Flat bootstrap Responsive website Template | About :: w3layouts</title>
+<title>Available Suits</title>
 <!--mobile apps-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -117,10 +117,6 @@
 
 			<%= link_to 'New Apparel', new_apparel_path %>
 		</div>
-	</div>
-	<!-- //testimonials -->
-	<!--team-->
-	<div class="team">
 
 	</div>
 	<!--//team-->
