--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,12 @@
         <div class="starter-template">
             <h1>Home </h1>
             <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+            <form>
+                <%= link_to "checkin", checkin_path, :class => 'btn btn-primary'%> 
+            </form>
+            <form>
+                <%= link_to "checkout", checkout_path, :class => 'btn btn-primary'%> 
+            </form>
         </div>
     </div><!-- /.container -->
 </html>
