Created tables for available, rentals, and students.

--- a/app/views/apparels/index.html.erb
+++ b/app/views/apparels/index.html.erb
@@ -2,20 +2,19 @@
 
 <h1>Listing Apparels</h1>
 
-<table>
-  <thead>
+
+<table class="table table-hover">
+  <thead class="thead-inverse">
     <tr>
-      <th>Apparel id</th>
+      <th>Apparel ID</th>
       <th>Sex</th>
       <th>Article</th>
       <th>Size</th>
       <th>Status</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
-    <% @apparels.each do |apparel| %>
+     <% @apparels.each do |apparel| %>
       <tr>
         <td><%= apparel.Apparel_ID %></td>
         <td><%= apparel.Sex %></td>
@@ -29,6 +28,7 @@
     <% end %>
   </tbody>
 </table>
+
 
 <br>
 
