--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,6 +16,8 @@
       <ul class="nav navbar-nav">
         <li class="active"><%= link_to "Home", root_path %></li>
         <li><%= link_to "Available", available_path %></li>
+        <li><%= link_to "Rentals", rentals_path %></li>
+        <li><%= link_to "Students", students_path %></li>
         <li><%= link_to "Checked Out", checkedout_path %></li>
         <li><%= link_to "Late", late_path %></li>
         <li><%= link_to "Appointments", appointments_path %></li>
