--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -2,20 +2,18 @@
 
 <h1>Listing Students</h1>
 
-<table>
-  <thead>
+<table class="table table-hover">
+  <thead class="thead-inverse">
     <tr>
-      <th>Uin</th>
-      <th>First name</th>
-      <th>Last name</th>
+      <th>UIN</th>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Email</th>
-      <th>Phone number</th>
-      <th colspan="3"></th>
+      <th>Phone Number</th>
     </tr>
   </thead>
-
   <tbody>
-    <% @students.each do |student| %>
+       <% @students.each do |student| %>
       <tr>
         <td><%= student.UIN %></td>
         <td><%= student.First_Name %></td>
