--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,5 +1,92 @@
-<h1>New Rental</h1>
+<h1>Check Out!</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', rentals_path %>
+<!DOCTYPE html>
+<html lang="en">
+   <div class="container">
+       <div class="starter-template">
+           <h1>Check Out </h1>
+           <form>
+               <fieldset class="form-group">
+               <label for="exampleInputEmail1">UIN</label>
+               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter UIN">
+               <label for="exampleInputEmail1">Apparel ID</label>
+               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter Apparel ID">
+               <br>
+               
+
+<!-- Include Bootstrap Datepicker -->
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
+
+<style type="text/css">
+/**
+* Override feedback icon position
+* See http://formvalidation.io/examples/adjusting-feedback-icon-position/
+*/
+#dateRangeForm .form-control-feedback {
+   top: 0;
+   right: -15px;
+}
+</style>
+
+<form id="dateRangeForm" method="post" class="form-horizontal">
+   <div class="form-group">
+       <label class="control-label">Checkout Date</label>
+       <br>
+           <div class="input-group input-append date" id="dateRangePicker">
+               <input type="text" class="form-control" name="date" />
+               <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
+           </div>
+   </div>
+
+   <div class="form-group">
+       <br>
+           <%= link_to "Submit", checkout_path, :class => 'btn btn-primary'%>
+   </div>
+</form>
+       </div>
+   </div><!-- /.container -->
+</html>
+
+<script>
+$(document).ready(function() {
+   $('#dateRangePicker')
+       .datepicker({
+           format: 'mm/dd/yyyy',
+           startDate: '01/01/2010',
+           endDate: '12/30/2020'
+       })
+       .on('changeDate', function(e) {
+           // Revalidate the date field
+           $('#dateRangeForm').formValidation('revalidateField', 'date');
+       });
+
+   $('#dateRangeForm').formValidation({
+       framework: 'bootstrap',
+       icon: {
+           valid: 'glyphicon glyphicon-ok',
+           invalid: 'glyphicon glyphicon-remove',
+           validating: 'glyphicon glyphicon-refresh'
+       },
+       fields: {
+           date: {
+               validators: {
+                   notEmpty: {
+                       message: 'The date is required'
+                   },
+                   date: {
+                       format: 'MM/DD/YYYY',
+                       min: '01/01/2010',
+                       max: '12/30/2020',
+                       message: 'The date is not a valid'
+                   }
+               }
+           }
+       }
+   });
+});
+</script>
