--- a/app/views/pages/appointments.html.erb
+++ b/app/views/pages/appointments.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <div class="container">
-        <div class="starter-template">
-            <h1>appointments </h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-        </div>
+        <h3 class="title">Our Calendar </h3>
+			<div class="starter-template">
+				<iframe src="https://calendar.google.com/calendar/embed?src=esteban.solis93%40gmail.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+			</div>	
     </div><!-- /.container -->
 </html>
