--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Rentals</h1>
+<!-- <h1>Listing Rentals</h1>
 
 <table class="table table-hover">
   <thead class="thead-inverse">
@@ -27,7 +27,50 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table> -->
+
+
+<div class="container">
+    <div class="row">
+        <div class="panel panel-primary filterable">
+            <div class="panel-heading">
+                <h3 class="panel-title">Rentals</h3>
+                <div class="pull-right">
+                  <div class="invisible">
+                    <button class="btn btn-default btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
+                  </div>
+                </div>
+            </div>
+            <table class="table">
+                <thead>
+                    <tr class="filters">
+                        <th><input type="text" class="form-control" placeholder="Rental ID" ></th>
+                        <th><input type="text" class="form-control" placeholder="UIN" ></th>
+                        <th><input type="text" class="form-control" placeholder="Apparel ID" ></th>
+                        <th><input type="text" class="form-control" placeholder="Checkout Date" ></th>
+                        <th><input type="text" class="form-control" placeholder="Expected Return Date" ></th>
+                        <th><input type="text" class="form-control" placeholder="Return Date" ></th>
+                    </tr>
+                </thead>
+                <tbody>
+                     <% @rentals.each do |rental| %>
+                    <tr>
+                      <td><%= rental.Rental_ID %></td>
+                      <td><%= rental.UIN %></td>
+                      <td><%= rental.Apparel_ID %></td>
+                      <td><%= rental.Checkout_Date %></td>
+                      <td><%= rental.Expected_Return_Date %></td>
+                      <td><%= rental.Return_Date %></td>
+                      <td><%= link_to 'Edit', edit_rental_path(rental) %></td>
+                      <td><%= link_to 'Destroy', rental, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
+
 
 <br>
 
