--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Students</h1>
+<!-- <h1>Listing Students</h1>
 
 <table class="table table-hover">
   <thead class="thead-inverse">
@@ -25,7 +25,46 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+</table> -->
+
+<div class="container">
+    <div class="row">
+        <div class="panel panel-primary filterable">
+            <div class="panel-heading">
+                <h3 class="panel-title">Students</h3>
+                <div class="pull-right">
+                  <div class="invisible">
+                    <button class="btn btn-default btn-xs btn-filter"><span class="glyphicon glyphicon-filter"></span> Filter</button>
+                  </div>
+                </div>
+            </div>
+            <table class="table">
+                <thead>
+                    <tr class="filters">
+                        <th><input type="text" class="form-control" placeholder="UIN" ></th>
+                        <th><input type="text" class="form-control" placeholder="First Name" ></th>
+                        <th><input type="text" class="form-control" placeholder="Last Name" ></th>
+                        <th><input type="text" class="form-control" placeholder="Email" ></th>
+                        <th><input type="text" class="form-control" placeholder="Phone Number" ></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <% @students.each do |student| %>
+                    <tr>
+                      <td><%= student.UIN %></td>
+                      <td><%= student.First_Name %></td>
+                      <td><%= student.Last_Name %></td>
+                      <td><%= student.Email %></td>
+                      <td><%= student.Phone_Number %></td>
+                      <td><%= link_to 'Edit', edit_student_path(student) %></td>
+                      <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
 <br>
 
