checkin checkout views changed  aswell as controller for rentals. Minor change to rental modal

--- a/app/views/pages/checkin.html.erb
+++ b/app/views/pages/checkin.html.erb
@@ -1,9 +1,42 @@
+<!--  jQuery -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+
+<!-- Isolated Version of Bootstrap, not needed if your site already used Bootstrap -->
+<link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" />
+
+<!-- Bootstrap Date-Picker Plugin -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
+
 <!DOCTYPE html>
 <html lang="en">
     <div class="container">
         <div class="starter-template">
             <h1>Check In </h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+            <form>
+                <fieldset class="form-group">
+                <label for="uin">UIN</label>
+                <input type="email" class="form-control" id="uin" placeholder="Enter UIN">
+                <label for="apparel_id">Apparel ID</label>
+                <input type="email" class="form-control" id="apparel_id" placeholder="Enter Apparel ID">
+                <label class="control-label" for="return_date">Returned Date</label>
+                <input class="form-control" id="return_date" name="date" placeholder="MM/DD/YYYY" type="text"/>
+                <br>
+                <%= link_to "Submit", checkin_path, :class => 'btn btn-primary'%>
+
+            </form>
         </div>
     </div><!-- /.container -->
 </html>
+
+<script>
+    var date_input=$('input[name="date"]'); //our date input has the name "date"
+    var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
+    var options={
+        format: 'mm/dd/yyyy',
+        container: container,
+        todayHighlight: true,
+        autoclose: true,
+    };
+    date_input.datepicker(options); //initiali110/26/2015 8:20:59 PM ze plugin
+</script>
