--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -1,6 +1,12 @@
-<h1>Check Out!</h1>
+<!--  jQuery -->
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 
-<%= render 'form' %>
+<!-- Isolated Version of Bootstrap, not needed if your site already used Bootstrap -->
+<link rel="stylesheet" href="https://formden.com/static/cdn/bootstrap-iso.css" />
+
+<!-- Bootstrap Date-Picker Plugin -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,85 +14,33 @@
        <div class="starter-template">
            <h1>Check Out </h1>
            <form>
-               <fieldset class="form-group">
-               <label for="exampleInputEmail1">UIN</label>
-               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter UIN">
-               <label for="exampleInputEmail1">Apparel ID</label>
-               <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter Apparel ID">
-               <br>
-               
+             <fieldset class="form-group">
+             <label for="rent_id">Rental ID</label>
+             <input type="email" class="form-control" id="rent_id" placeholder="Enter Rental ID">
+             <label for="uin">UIN</label>
+             <input type="email" class="form-control" id="uin" placeholder="Enter UIN">
+             <label for="apparel_id">Apparel ID</label>
+             <input type="email" class="form-control" id="apparel_id" placeholder="Enter Apparel ID">
+             <label class="control-label" for="check_out_date">Check Out Date</label>
+             <input class="form-control" id="check_out_date" name="date" placeholder="MM/DD/YYYY" type="text"/>
+             <label class="control-label" for="expected_return_date">Expected Return Date</label>
+             <input class="form-control" id="expected_return_date" name="date" placeholder="MM/DD/YYYY" type="text"/>
 
-<!-- Include Bootstrap Datepicker -->
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css" />
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker3.min.css" />
-
-<script src="//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.min.js"></script>
-
-<style type="text/css">
-/**
-* Override feedback icon position
-* See http://formvalidation.io/examples/adjusting-feedback-icon-position/
-*/
-#dateRangeForm .form-control-feedback {
-   top: 0;
-   right: -15px;
-}
-</style>
-
-<form id="dateRangeForm" method="post" class="form-horizontal">
-   <div class="form-group">
-       <label class="control-label">Checkout Date</label>
-       <br>
-           <div class="input-group input-append date" id="dateRangePicker">
-               <input type="text" class="form-control" name="date" />
-               <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
-           </div>
-   </div>
-
-   <div class="form-group">
-       <br>
-           <%= link_to "Submit", checkout_path, :class => 'btn btn-primary'%>
-   </div>
+           <br>
+           <%= link_to "Submit", "/rentals(.:format)",:rent_id =>"rent_id",:uin => "uin",:apparel_id =>"apparel_id",:check_out_date => "check_out_date",:expected_return_date => "expected_return_date", :class => 'btn btn-primary'%>
 </form>
        </div>
    </div><!-- /.container -->
 </html>
 
 <script>
-$(document).ready(function() {
-   $('#dateRangePicker')
-       .datepicker({
-           format: 'mm/dd/yyyy',
-           startDate: '01/01/2010',
-           endDate: '12/30/2020'
-       })
-       .on('changeDate', function(e) {
-           // Revalidate the date field
-           $('#dateRangeForm').formValidation('revalidateField', 'date');
-       });
-
-   $('#dateRangeForm').formValidation({
-       framework: 'bootstrap',
-       icon: {
-           valid: 'glyphicon glyphicon-ok',
-           invalid: 'glyphicon glyphicon-remove',
-           validating: 'glyphicon glyphicon-refresh'
-       },
-       fields: {
-           date: {
-               validators: {
-                   notEmpty: {
-                       message: 'The date is required'
-                   },
-                   date: {
-                       format: 'MM/DD/YYYY',
-                       min: '01/01/2010',
-                       max: '12/30/2020',
-                       message: 'The date is not a valid'
-                   }
-               }
-           }
-       }
-   });
-});
+    var date_input=$('input[name="date"]'); //our date input has the name "date"
+    var container=$('.bootstrap-iso form').length>0 ? $('.bootstrap-iso form').parent() : "body";
+    var options={
+        format: 'mm/dd/yyyy',
+        container: container,
+        todayHighlight: true,
+        autoclose: true,
+    };
+    date_input.datepicker(options); //initiali110/26/2015 8:20:59 PM ze plugin
 </script>
