Fixed checkout functionality

--- a/app/views/apparels/index.html.erb
+++ b/app/views/apparels/index.html.erb
@@ -1,7 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="panel panel-primary filterable">
             <div class="panel-heading">
@@ -13,11 +10,11 @@
             <table class="table">
                 <thead>
                     <tr class="filters">
-                        <th><input type="text" class="form-control" placeholder="ID" disabled></th>
-                        <th><input type="text" class="form-control" placeholder="Sex" disabled></th>
-                        <th><input type="text" class="form-control" placeholder="Article" disabled></th>
-                        <th><input type="text" class="form-control" placeholder="Size" disabled></th>
-                        <th><input type="text" class="form-control" placeholder="Status" disabled></th>
+                        <th><input type="text" class="form-control" placeholder="ID" enabled></th>
+                        <th><input type="text" class="form-control" placeholder="Sex" enabled></th>
+                        <th><input type="text" class="form-control" placeholder="Article" enabled></th>
+                        <th><input type="text" class="form-control" placeholder="Size" enabled></th>
+                        <th><input type="text" class="form-control" placeholder="Status" enabled></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -36,7 +33,32 @@
             </table>
         </div>
     </div>
-</div>
+</div> -->
+<table id="apparels">
+  <thead>
+    <tr>
+      <th>ID</th>
+      <th>Sex</th>
+      <th>Article</th>
+      <th>Size</th>
+      <th>Status</th>
+  </thead>
+  <tbody>
+    <% @apparels.each do |apparel| %>
+      <tr>
+        <td><%= apparel.Apparel_ID %></td>
+        <td><%= apparel.Sex %></td>
+        <td><%= apparel.Article %></td>
+        <td><%= apparel.Size %></td>
+        <td><%= apparel.Status %></td>
+        <td><%= link_to 'Edit', edit_apparel_path(apparel) %></td>
+        <td><%= link_to 'Destroy', apparel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+  
+<style>body { margin: 10px; }</style>
 
 
 <br>
