--- a/app/views/rentals/_form.html.erb
+++ b/app/views/rentals/_form.html.erb
@@ -25,15 +25,15 @@
   </div>
   <div class="field">
     <%= f.label :Checkout_Date %><br>
-    <%= f.text_field :Checkout_Date %>
+    <%= f.date_field :Checkout_Date %>
   </div>
   <div class="field">
     <%= f.label :Expected_Return_Date %><br>
-    <%= f.text_field :Expected_Return_Date %>
+    <%= f.date_field :Expected_Return_Date %>
   </div>
   <div class="field">
     <%= f.label :Return_Date %><br>
-    <%= f.text_field :Return_Date %>
+    <%= f.date_field :Return_Date %>
   </div>
   <div class="actions">
     <%= f.submit %>
