Fixed routing after creating new entries in models

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,3 +17,12 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+
+.test {
+    text-align: center;
+    padding-bottom: 30px
+}
+.form{
+	text-align: center;
+}
