--- a/app/views/apparels/index.html.erb
+++ b/app/views/apparels/index.html.erb
@@ -34,7 +34,7 @@
         </div>
     </div>
 </div> -->
-<table id="apparels">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>ID</th>
