front end cleaning added footer

--- a/app/views/pages/appointments.html.erb
+++ b/app/views/pages/appointments.html.erb
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
+
     <div class="container">
-        <h3 class="title">Our Calendar </h3>
 			<div class="starter-template">
-				<iframe src="https://calendar.google.com/calendar/embed?src=esteban.solis93%40gmail.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+			    <div class="calendars"></div>
+				<iframe src="https://calendar.google.com/calendar/embed?src=o2uct4olgmln1jq0mitcl0d75t8obc75%40import.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+			<!--	<iframe src="https://calendar.google.com/calendar/embed?src=5ngv3g17kjru9dag8gej9k9m741o7bdf%40import.calendar.google.com&ctz=America/Chicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> -->
+		        </div>
 			</div>	
     </div><!-- /.container -->
-</html>
