--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,12 @@
-<footer class="footer">
-      <div class="container">
-        <p class="text-muted">Place sticky footer content here.</p>
-      </div>
-</footer>
+  <footer class="footer">
+  <div class="container">
+  <nav>
+    <ul>
+      <li><%= link_to "Twitter",   'https://twitter.com/AskCareerCloset' %></li>
+      <li><%= link_to "Facebook", 'https://www.facebook.com/askcareercloset' %></li>
+      <li><%= link_to "SetMore", 'http://www.setmore.com/' %></li>
+      <li><%= link_to "Career Closet", 'http://www.tamucareercloset.com/' %></li>
+    </ul>
+  </nav>
+  </div>
+  </footer>
