--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-dark bg-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -18,10 +18,10 @@
         <li><%= link_to "Available", available_path %></li>
         <li><%= link_to "Rentals", rentals_path %></li>
         <li><%= link_to "Students", students_path %></li>
-        <li><%= link_to "Checked Out", checkedout_path %></li>
-        <li><%= link_to "Late", late_path %></li>
+       <!-- <li><%= link_to "Checked Out", checkedout_path %></li>-->
+       <!-- <li><%= link_to "Late", late_path %></li>-->
         <li><%= link_to "Appointments", appointments_path %></li>
-        <li><%= link_to "Sign In", signin_path %></li>
+        <li><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
