--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 
     <div class="container">
         <div class="starter-template">
+            <h1 class ="headers1">TEXAS A&M UNIVERSITY CAREER CLOSET - INTERNAL SYSTEM</h1>
             <div class="buttonHolder">
                     <%= link_to "Check Out", checkout_path, :class => 'btn-btn-primary2' %> 
                     <%= link_to "Check In", checkin_path, :class => 'btn-btn-primary1' %> 
