--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-inverse">
+<nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><%= link_to "Home", root_path %></li>
-        <li><%= link_to "Available", available_path %></li>
+        <li><%= link_to "Apparel", available_path %></li>
         <li><%= link_to "Rentals", rentals_path %></li>
         <li><%= link_to "Students", students_path %></li>
        <!-- <li><%= link_to "Checked Out", checkedout_path %></li>-->
