--- a/app/views/rentals/new.html.erb
+++ b/app/views/rentals/new.html.erb
@@ -31,7 +31,7 @@
       		<%= f.date_field :Return_Date %>
 		</p>
 		<p>
-			<%= f.submit class: "btn btn-info padded_button bid-btn" %>
+			<%= f.submit class: "btn-btn-primary3" %>
 		</p>
 		<% end %>
 	</tbody>
