--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -7,7 +7,7 @@
  overflow: hidden; 
  text-align: center;
 }
-.btn-btn-primary1, .btn-btn-primary2 {
+.btn-btn-primary1, .btn-btn-primary2, .btn-btn-primary3 {
   display: block;
 }
 .btn-btn-primary1 {
@@ -17,8 +17,12 @@
   float: right;
 }
 
+.btn-btn-primary3{
+  margin: 0 auto;
+}
 
-.btn-btn-primary1, .btn-btn-primary2 {
+
+.btn-btn-primary1, .btn-btn-primary2, .btn-btn-primary3 {
   background: #500000;
   background-image: -webkit-linear-gradient(top, #480000, #4B0000);
   background-image: -moz-linear-gradient(top, #480000, #4B0000);
@@ -34,7 +38,7 @@
   text-decoration: none;
 }
 
-.btn-btn-primary1:hover, .btn-btn-primary2:hover {
+.btn-btn-primary1:hover, .btn-btn-primary2:hover, btn-btn-primary3:hover {
   background: #500000;
   background-image: -webkit-linear-gradient(top, #480000, #500000);
   background-image: -moz-linear-gradient(top, #480000, #500000);
