--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,33 @@
-<h1>New Student</h1>
+<div class="test">
+<h1>Add Student To Database</h1>
+</div>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', students_path %>
+<div class="form">
+	<tbody>
+		<%= form_for(@student) do |f| %>
+		<p>
+			<%= f.label :UIN %><br>
+      		<%= f.text_field :UIN %>
+		</p>
+		<p>
+			 <%= f.label :First_Name %><br>
+     		 <%= f.text_field :First_Name %>
+		</p>
+		<p>
+			 <%= f.label :Last_Name %><br>
+     		 <%= f.text_field :Last_Name %>
+		</p>
+		<p>
+			<%= f.label :Email %><br>
+      		<%= f.text_field :Email %>
+		</p>
+		<p>
+			<%= f.label :Phone_Number %><br>
+     	 	<%= f.text_field :Phone_Number %>
+		</p>
+		<p>
+			<%= f.submit class: "btn-btn-primary3" %>
+		</p>
+		<% end %>
+	</tbody>
+</div>
