--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -2,10 +2,26 @@
   <div class="container">
   <nav>
     <ul>
-      <li><%= link_to "Twitter",   'https://twitter.com/AskCareerCloset' %></li>
-      <li><%= link_to "Facebook", 'https://www.facebook.com/askcareercloset' %></li>
-      <li><%= link_to "SetMore", 'http://www.setmore.com/' %></li>
-      <li><%= link_to "Career Closet", 'http://www.tamucareercloset.com/' %></li>
+    <li>
+      <a href="https://twitter.com/AskCareerCloset">
+         <%= image_tag "1_twitter.png" %>
+      </a>
+    </li>
+     <li>
+         <a href="https://www.facebook.com/askcareercloset">
+        <%= image_tag "1_facebook.png" %>
+      </a>
+    </li>
+     <li>
+      <a href="http://www.setmore.com/">
+        <%= image_tag "1_calendar.png" %>
+      </a>
+    </li>
+     <li>
+         <a href="http://www.tamucareercloset.com/">
+         <%= image_tag "1_home.png" %>
+      </a>
+    </li>
     </ul>
   </nav>
   </div>
